* Fix {bz: 4472}, retaining the overflow:auto setting for WebKit+Richtext but moving it into wikiwyg.css.

--- a/nlw/share/skin/s3/css/wikiwyg.css
+++ b/nlw/share/skin/s3/css/wikiwyg.css
@@ -16,6 +16,7 @@ body.wiki {
     padding: 0 !important;
     line-height: normal !important;
     font-size: 11px !important;
+    overflow: auto !important;
 }
 
 table {
